# Sonoluminiscence

./: CMakeLists.txt  README.md
apps/: build_geometry.cpp  run_pipeline.cpp  solve_acoustics.cpp  solve_bubble.cpp  solve_bubble_candidates.cpp
configs/: base.yaml  mid_aggressive.yaml
include/acoustics/: acoustics_problem.hpp  boundary_conditions.hpp  field_derivatives.hpp  field_sampler.hpp  gorkov_candidates.hpp  gorkov_potential.hpp  helmholtz_solver.hpp
include/bubble/: adaptive_ode_solver.hpp  bubble_rhs.hpp  bubble_simulation_result.h  bubble_simulation_result.hpp  gas_model.hpp  keller_miksis.hpp  ode_solver.hpp  rayleigh_plesset.hpp  thermal_model.hpp
include/core/: config.hpp
include/coupling/: bubble_excitation.hpp  pipeline.hpp  pressure_coupling.hpp
include/geometry/: geometry_builder.hpp  reflector_geometry.hpp  vessel_geometry.hpp
include/io/: bubble_excitation_reader.hpp  bubble_vtk_writer.hpp  csv_writer.hpp  result_writer.hpp  vtk_writer.hpp  yaml_reader.hpp
include/mesh/: gmsh_driver.hpp  mesh_tags.hpp
include/postprocess/: metrics.hpp
results/bubble_km/: best_sbs_candidates.csv  bubble_results_all.csv
results/bubble_km/timeseries/: iter0_axisymmetric_near_collapse_stable_candidate_001.csv  iter0_axisymmetric_near_collapse_stable_candidate_002.csv  iter0_axisymmetric_near_collapse_stable_manual_config_point.csv
results/week1_acoustics/: acoustic_slice.vtk  bubble_excitation.csv
results/week23_gorkov/: acoustic_slice.vtk  bubble_excitations.csv  gorkov_candidates.csv  gorkov_field.csv  gorkov_potential_aligned.pos  mesh.msh
scripts/: join_bubble_results.py  merge_acoustic_candidates.py  run_acoustic_sweep.py
src/acoustics/: acoustics_problem.cpp  boundary_conditions.cpp  field_derivatives.cpp  field_sampler.cpp  gorkov_candidates.cpp  gorkov_potential.cpp  helmholtz_solver.cpp
src/bubble/: adaptive_ode_solver.cpp  bubble_rhs.cpp  bubble_simulation_result.cpp  gas_model.cpp  keller_miksis.cpp  ode_solver.cpp  rayleigh_plesset.cpp  thermal_model.cpp
src/coupling/: bubble_excitation.cpp  pipeline.cpp  pressure_coupling.cpp
src/geometry/: reflector_geometry.cpp  vessel_geometry.cpp
src/io/: bubble_excitation_reader.cpp  bubble_simulation_result.cpp  bubble_vtk_writer.cpp  csv_writer.cpp  result_writer.cpp  solve_bubble_candidates.cpp  vtk_writer.cpp  yaml_reader.cpp
src/mesh/: gmsh_driver.cpp
src/postprocess/: metrics.cpp
